# SWIG-boilerplate

./: .gitignore  CMakeLists.txt  README.md
python/: CMakeLists.txt  swigproject.swig
python/simple/: Makefile  example.cpp  example.i  test.sh
src/: CMakeLists.txt
src/class/: kitty.cpp  kitty.hpp
src/simple/: example.cpp  example.hpp
test/: CMakeLists.txt  setpypath.sh  test.cpp  test.py
