cmake_minimum_required(VERSION 3.19 FATAL_ERROR)

set(CMAKE_CXX_STANDARD 11)

find_package(SWIG REQUIRED COMPONENTS python)
include(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

set(UseSWIG_TARGET_NAME_PREFERENCE STANDARD)
set(SWIG_SOURCE_FILE_EXTENSIONS swig)
set(COMPILE_FLAGS "-Xlinker -export-dynamic")

set_property(SOURCE swigproject.swig PROPERTY CPLUSPLUS ON)
swig_add_library(swigproject TYPE SHARED LANGUAGE python SOURCES swigproject.swig)
TARGET_LINK_LIBRARIES(swigproject projectname)

file(WRITE PYTHONPATH.env "export PYTHONPATH=$PYTHONPATH:${CMAKE_CURRENT_BINARY_DIR}")
file(CHMOD ${CMAKE_SOURCE_DIR}/python/PYTHONPATH.env PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ)
